--- a/5/20/index2.html
+++ b/5/20/index2.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>我们的爱情故事</title>
+    <title>依•恋</title>
     <embed src="告白气球.mp3" hidden="true" autostart="true" loop="true">
     <style type="text/css">
         @font-face {
@@ -16,58 +16,61 @@
 
 <body>
     <div id="mainDiv">
-        <div id="content" style="width: 1110px; height: 625px; margin-top: 52px; margin-left: 245px;">
+        <div id="content" style="width: 999px; height: 100%;">
             <div id="code">
                 <span class="comments">/**</span><br>
-                <span class="space"><span class="comments">*因为我是一个程序员,</span><br>
-                <span class="space"><span class="comments">*所以我写一些代码来显示我对你的爱.</span><br>
-                <span class="space"><span class="comments">*/</span><br>
-                Boy i = <span class="keyword">new</span> Boy(<span class="string">"某人"</span>);<br>
-                Girl u = <span class="keyword">new</span> Girl(<span class="string">"某人"</span>);<br>
-                <span class="comments">// 2014年1月1日,你说你不爱我. </span><br>
-                i.love(u);<br>
-                <span class="comments">// 但是......，你说，我们还是好朋友。</span><br>
-                u.sayOtherthing();<br>
-                <span class="comments">// 没有原因。</span><br>
-                <span class="keyword">var</span> reason=i.ask(u);<br>
-                <span class="comments">// 我们并没有足够的了解对方。</span><br>
-                $("body").append(reason);<br>
-                <span class="comments">// 我们的关系发展毫无前途。</span><br>
-                <span class="comments">// And take care of u and our love.</span><br>
-                i.takeCareOf(u);<br>
-                <span class="comments">// 所以我一直在等待，我有信心，你会。</span><br>
-                <span class="keyword">boolean</span> isAccept = <span class="keyword">false</span>;<br>
+                <span class="space"><span class="comments">*因为我算是一个程序员吧，</span><br></span>
+                <span class="space"><span class="comments">*所以我写一些代码来表达我的心意。</span><br></span>
+                <span class="space"><span class="comments">*/</span><br></span>
+                Boy i = <span class="keyword">new</span> Boy(<span class="string">"H.Lin(0)"</span>);<br>
+                Girl u = <span class="keyword">new</span> Girl(<span class="string">"Z.Zeyi(1)"</span>);<br>
+                <span class="comments">// 2019年4月7日，我第一次看到关于你的信息，当时就心想：卧槽，这不是我喜欢的类型吗！于是第一次向你打招呼。 </span><br>
+                i.firstMeet(u);<br>
+                <span class="comments">// 2019年4月8日14时16分，你第一次回应我的消息。 </span><br>
+                u.firstResponse(i);<br>
+                <span class="comments">// 于是，我们的第一次聊天进行得满成功的，而且，我还顺利地加到了你的微信！嘻嘻！别提多开心了！</span><br>
+                i.get_your_Wechat(happy);<br>
+                <span class="comments">// 2019年4月8日19时45分，知道了你的名字。当时还特别夸赞说你的名字好听，你还不觉得。于是我直接秀了一把，深入分析了你的名字是如何的好，哈哈哈！福泽可依，泽依，这个名字我永远的记在了心里！</span><br>
+                i.remember_yourName(deeply);<br>
+                <span class="comments">// 在后来的聊天中慢慢地了解到你的努力认真、你的坚持兼职只为攒钱继续学吉他以及你对小洋妹的思切情深等等。但是我觉得我对你的了解真的还不够，于是我每天都有了一个小小的目标，那就是每天都要跟你聊聊天。</span><br>
+                <span class="keyword">var</span> smallTarget = i.chat_with(u);<br>
+                <span class="comments">// 于是我开始对你进行了撩妹计划，但是这似乎成为了一场尬撩，因为你说你一般是撩不动的哈哈，这可把我给急坏了。不过还好，至少我知道了你是单身的，这样我就有机会去追你了呀嘻嘻嘻！</span><br>
+                i.make_up_myMind_to_chase(u);<br>
+                <span class="comments">// 当得知你还有一周要考专四时，我放缓了追你的步伐，为了不影响到你，不太敢跟你聊天太久，但是每天聊天我还是会坚持的。为了能鼓励你为你加油，我为你做了一个“每日一句”。而且你还不知道的是，我同时也在暗暗地做一些你可能比较喜欢的以及我以后要向你表白的一些小项目哈哈哈。</span><br>
+                $("body").append(smallTarget);<br>
+                <span class="comments">// 终于，4月20日，你考完了专四，不管考得好不好，努力过就问心无愧了。我想，现在该加快我追你的步伐了。<br>但是，我现在却有些犹豫了，因为我没什么把握，因为我不知道你的想法，因为我怕你拒绝了我该怎么办...<br>“毕竟咱俩面都还没见过，现在去表白的话，她会接受我吗？”</span><br>
+                <span class="keyword">boolean</span> isAccept;<br>
+                <span class="comments">// “这有什么好犹豫的！喜欢就大胆地说出来啊！管它什么结果好坏呢！她不正是你喜欢的类型吗？茫茫人海能够遇见自己真正喜欢的人真的不容易！喜欢就大胆的去追吧！”</span><br>
+                <span class="comments">// 所以，我喜欢你，你也会喜欢我吗？</span><br>
                 <span class="keyword">while</span> (isAccept) {<br>
-                <span class="placeholder">i.waitFor(u);<br>
-                <span class="placeholder"><span class="comments">// 我觉得是一个重要的决定</span><br>
-                <span class="placeholder"><span class="comments">// 你应该忘记之前发生的不愉快的事情。</span><br>
-                <span class="placeholder">isAccept = u.thinkOver();<br>
-                }<br>
-                <span class="comments">// 如果你接受我，我们将会生活幸福快乐的日子。</span><br>
+                <span class="comments"> // 如果是，那我们交往吧嘻嘻！</span><br>
+                <span class="placeholder">
                 u.accept(i);<br>
-                i.liveHappilyWith(u);<br>
-
-
-            </span></span></span></span></span></span></span>_</div>
+                i.associate_with(u);<br>
+                }<br>
+                </span>
+                <span class="comments">// 如果否，我会一直等着你的！</span><br>
+                i.waitFor(u);<br>_
+            </div>
             <div id="loveHeart">
                 <canvas id="garden" width="670" height="625"></canvas>
                 <div id="words" style="position: absolute; top: 257px; left: 765px;">
-                    <div id="messages" style="display: block;">
+                    <div id="messages" style="display: none;text-align: center;">
                         <center>
                             <script type="text/javascript">
-                            google_ad_client = "ca-pub-3712320065678109";
-                            google_ad_slot = "0650322805";
-                            google_ad_width = 320;
-                            google_ad_height = 50;
+                                google_ad_client = "ca-pub-3712320065678109";
+                                google_ad_slot = "0650322805";
+                                google_ad_width = 320;
+                                google_ad_height = 50;
                             </script>
                         </center>
-                        <div>某人，我将会等着你爱我</div>
+                        <div>Z.Zeyi, I've been waiting for U: </div>
                         <div id="elapseClock" style="display:none"></div>
                         <a href="index3.html" id="accept">如果你接受我，请点击这里</a>
                     </div>
                     <div id="loveu" style="display: none;">
-                        爱你，直到永永远远。<br>
-                        <div class="signature">- Love</div>
+                        5351230 8834760<br>
+                        <div class="signature">0 4 1</div>
                     </div>
                 </div>
             </div>
