--- a/5/20/index3.html
+++ b/5/20/index3.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>你若不离不弃 我必生死相依</title>
+    <title>执子之手 与子偕老</title>
     <embed src="东西.mp3" hidden="true" autostart="true" loop="true">
     <style type="text/css">
         body {
@@ -25,7 +25,9 @@
         body {
             color: #FFF;
             padding: 10px;
-            background: pink url(bg.jpg) no-repeat fixed top center;
+            background: pink url("images/3.jpg") no-repeat fixed center center;
+            background-size: cover;
+            width: 100%;
             margin-left: 0px;
             margin-top: 0px;
             margin-right: 0px;
