--- a/5/20/index2.html
+++ b/5/20/index2.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>依•恋</title>
-    <embed src="告白气球.mp3" hidden="true" autostart="true" loop="true">
+    <audio src="告白气球.mp3" hidden="true" loop="true" autoplay="true"></audio>
     <style type="text/css">
         @font-face {
             font-family: digit;
@@ -52,7 +52,7 @@
                 <span class="comments">// 如果否，我会一直等着你的！</span><br>
                 i.waitFor(u);<br>_
             </div>
-            <div id="loveHeart">
+            <div id="loveHeart" style="position: relative;">
                 <canvas id="garden" width="670" height="625"></canvas>
                 <div id="words" style="position: absolute; top: 257px; left: 765px;">
                     <div id="messages" style="display: none;text-align: center;">
@@ -68,9 +68,8 @@
                         <div id="elapseClock" style="display:none"></div>
                         <a href="index3.html" id="accept">如果你接受我，请点击这里</a>
                     </div>
-                    <div id="loveu" style="display: none;">
-                        5351230 8834760<br>
-                        <div class="signature">0 4 1</div>
+                    <div id="loveu" style="display: none;">5351230&nbsp;&nbsp;8834760<br>
+                        <div class="signature"> 0 4 1</div>
                     </div>
                 </div>
             </div>
