--- a/5/20/index3.html
+++ b/5/20/index3.html
@@ -2,7 +2,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>执子之手 与子偕老</title>
-    <embed src="东西.mp3" hidden="true" autostart="true" loop="true">
+    <audio src="东西.mp3" hidden="true" autoplay="true" loop="true"></audio>
     <style type="text/css">
         body {
             margin-left: 0px;
