--- a/5/20/index2.html
+++ b/5/20/index2.html
@@ -68,8 +68,8 @@
                         <div id="elapseClock" style="display:none"></div>
                         <a href="index3.html" id="accept">如果你接受我，请点击这里</a>
                     </div>
-                    <div id="loveu" style="display: none;">5351230&nbsp;&nbsp;8834760<br>
-                        <div class="signature"> 0 4 1</div>
+                    <div id="loveu" style="display: none;">5351230&emsp;8834760<br>
+                        <div class="signature">0 4 1</div>
                     </div>
                 </div>
             </div>
