--- a/5/20/index3.html
+++ b/5/20/index3.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>执子之手 与子偕老</title>
+    <title>0110</title>
     <audio src="东西.mp3" hidden="true" autoplay="true" loop="true"></audio>
     <style type="text/css">
         body {
@@ -12,11 +12,11 @@
             background-color: pink;
         }
         .content {
-            width: 80%;
+            width: 100%;
             color: #90F;
             height: 100%;
             top: 0px;
-            left: 10%;
+            left: 0px;
             font-size: 18px;
             line-height: 25px;
             font-family: "微软雅黑";
@@ -48,7 +48,7 @@
             text-shadow : 0px 0px 1px #fff;
         }
     </style>
-    <script src="./jscss/jquery-1.7.1.min.js" language="javascript" type="text/javascript"></script>
+    <!-- <script src="./jscss/jquery-1.7.1.min.js" language="javascript" type="text/javascript"></script> -->
     <script src="./jscss/tao.js" language="javascript" type="text/javascript"></script>
 <!--     <script>
     $(document).ready(function(e) {
@@ -64,7 +64,7 @@
         var guang=setInterval("$.guang()",120);
         
         var subs=0;
-        var string="某人…… ██我喜欢你██真的很喜欢很喜欢你███你知道吗…每个噩梦惊醒的夜晚...总会依赖的想起你██每当夜深人静想起你的时候……眼泪总是忍不住的往下流██每当流星划过寂静的天边……都会为你许下祝福的心愿██我依旧对你那么思念██不管你怎么样……我对你的爱永远不会改变██我只是个很普通的人……可能配不上你██如果因为我的表白而影响你的学习……那很抱歉……██我可以等你……不管3年还是5年……██████████PS.青春美好——算了吧。。再弄也是白费力气的。。她是不可能接受的。。。我想了很多。。。也许。。她从来没有想过。。也从来没有一点点的喜欢我。。。██我。。真的很差。。。████████我希望你能够答应我 <-- The End";
+        var string="某人…… ██我喜欢你██真的很喜欢很喜欢你███你知道吗…每个噩梦惊醒的夜晚...总会依赖的想起你██每当夜深人静想起你的时候……眼泪总是忍不住的往下流██每当流星划过寂静的天边……都会为你许下祝福的心愿██我依旧对你那么思念██不管你怎么样……我对你的爱永远不会改变██我只是个很普通的人……可能配不上你██如果因为我的表白而影响你的学习……那很抱歉……██我可以等你……不管3年还是5年……██████████PS.青春美好——算了吧。。再弄也是白费力气的。。她是不可能接受的。。。我想了很多。。。也许。。她从来没有想过。。也从来没有一点点的喜欢我。。。██我。。真的很差。。。████████我希望你能够答应我 < The End";
         $.intent=function(str){
             str="　　"+str;
             //var reg=new RegExp("/█{1,2}/","i"); //创建正则RegExp对象
@@ -108,7 +108,7 @@
 </head>
 
 <body>
-    <audio src="def.mp3" autoplay="autoplay"></audio>
+    <!-- <audio src="def.mp3" autoplay="autoplay"></audio> -->
 
     <center>
         <div align="left" class="content"><span id="txt"></span><span id="guang"></span>
