--- a/5/20/index3.html
+++ b/5/20/index3.html
@@ -26,7 +26,7 @@
             color: #FFF;
             padding: 10px;
             background: pink url("images/3.jpg") no-repeat fixed center center;
-            background-size: cover;
+            background-size: repeat;
             width: 100%;
             margin-left: 0px;
             margin-top: 0px;
