--- a/5/20/index3.html
+++ b/5/20/index3.html
@@ -25,9 +25,9 @@
         body {
             color: #FFF;
             padding: 10px;
-            background: pink url("images/3.jpg") no-repeat fixed center center;
-            background-size: repeat;
-            width: 100%;
+            background: pink url("images/3.jpg") repeat fixed center center;
+            /*background-size: repeat;*/
+            /*width: 100%;*/
             margin-left: 0px;
             margin-top: 0px;
             margin-right: 0px;
