--- a/5/20/index3.html
+++ b/5/20/index3.html
@@ -25,7 +25,7 @@
         body {
             color: #FFF;
             padding: 10px;
-            background: pink url("images/3.jpg") repeat fixed center center;
+            background: pink url("images/3.jpg") repeat-x fixed center center;
             /*background-size: repeat;*/
             /*width: 100%;*/
             margin-left: 0px;
