--- a/5/20/index1.html
+++ b/5/20/index1.html
@@ -6,6 +6,7 @@
 <link rel="apple-touch-icon-precomposed" href="./jscss/1.png">
 <meta name="format-detection" content="telephone=no">
 <title>wo xuan ni</title>
+<audio src="盛夏与响恋.mp3" hidden="true" autoplay="true" loop="true"></audio>
 <style type="text/css">
 body {
 	text-align: center;
@@ -98,14 +99,34 @@ $(document).ready(function(e) {
 		<div class="tittle" id="t-1" style="display: block;">
 			<table width="100%" border="0" height="100%">
 				<tbody><tr>
-					<td align="center">献给屏幕前的<span class="big">你</span>
-					<br>Just for <span class="big">YOU</span>
+					<td align="center">献给屏幕前的<br><span class="big">你</span>
 					</td>
 				</tr>
 			</tbody></table>
 		</div>
-
 		<div class="tittle" id="t-2" style="display: none;">
+			<table width="100%" border="0" height="100%">
+				<tbody><tr>
+					<td align="center">Just</td>
+				</tr>
+			</tbody></table>
+		</div>
+		<div class="tittle" id="t-3" style="display: none;">
+			<table width="100%" border="0" height="100%">
+				<tbody><tr>
+					<td align="center">for</td>
+				</tr>
+			</tbody></table>
+		</div>
+		<div class="tittle" id="t-4" style="display: none;">
+			<table width="100%" border="0" height="100%">
+				<tbody><tr>
+					<td align="center"><span class="big">YOU</span></td>
+				</tr>
+			</tbody></table>
+		</div>
+
+		<div class="tittle" id="t-5" style="display: none;">
 			<table width="100%" border="0" height="100%">
 				<tbody><tr>
 					<td align="center"><span class="big">在这个特殊的</span>地方
@@ -115,7 +136,7 @@ $(document).ready(function(e) {
 			</tbody></table>
 		</div>
 
-		<div class="tittle" id="t-3" style="">
+		<div class="tittle" id="t-6" style="">
 			<table width="100%" border="0" height="100%">
 				<tbody><tr>
 					<td align="center">我想对<span class="big">你</span>说
@@ -126,21 +147,51 @@ $(document).ready(function(e) {
 		</div>
 	</center>
 
-	<div class="tittle" id="t-4" style="">
+	<div class="tittle" id="t-7" style="">
 		<table width="100%" border="0" height="100%">
 			<tbody><tr>
-				<td align="center">其实我<br><span class="big">暗恋你很久了</span>
-				<br><br>Actually, I've been<br><span class="big">in love with you<br>for a long time</span>
+				<td align="center">其实<br>Actually</td>
+			</tr>
+		</tbody></table>
+	</div>
+	<div class="tittle" id="t-8" style="">
+		<table width="100%" border="0" height="100%">
+			<tbody><tr>
+				<td align="center">我<br>I</td>
+			</tr>
+		</tbody></table>
+	</div>
+	<div class="tittle" id="t-9" style="">
+		<table width="100%" border="0" height="100%">
+			<tbody><tr>
+				<td align="center">
+				<span class="big">暗恋你<br>have been in love with you</span></td>
+			</tr>
+		</tbody></table>
+	</div>
+	<div class="tittle" id="t-10" style="">
+		<table width="100%" border="0" height="100%">
+			<tbody><tr>
+				<td align="center">
+				<span class="big">很久了<br>for a long time</span>
 				</td>
 			</tr>
 		</tbody></table>
 	</div>
 
-	<div class="tittle" id="t-5" style="">
+	<div class="tittle" id="t-11" style="">
 		<table width="100%" border="0" height="100%">
 			<tbody><tr>
-				<td align="center"><br>下面是我对你的<span class="big">表白内容</span>
-				<br>Here's what I said to<span class="big">YOU</span>
+				<td align="center">下面是我对你的<br>Here's what I said
+				</td>
+			</tr>
+		</tbody></table>
+	</div>
+	<div class="tittle" id="t-12" style="">
+		<table width="100%" border="0" height="100%">
+			<tbody><tr>
+				<td align="center">
+				<span class="big">表白</span>内容<br>to <span class="big">YOU</span>
 				</td>
 			</tr>
 		</tbody></table>
