--- a/5/20/index1.html
+++ b/5/20/index1.html
@@ -165,7 +165,7 @@ $(document).ready(function(e) {
 		<table width="100%" border="0" height="100%">
 			<tbody><tr>
 				<td align="center">
-				<span class="big">暗恋你<br>have been in love with you</span></td>
+				<span class="big">喜欢你<br>have been in love with you</span></td>
 			</tr>
 		</tbody></table>
 	</div>
